# odin-data

./: switcher.json
.github/workflows/: code.yml
cpp/common/include/: ClassLoader.h
cpp/frameProcessor/include/: DummySHMProcessPlugin.h
cpp/frameProcessor/src/: CMakeLists.txt  DummySHMProcessPlugin.cpp  DummySHMProcessPluginLib.cpp
cpp/frameReceiver/include/: CMakeLists.txt  DummySHMFrameDecoder.h  FrameDecoderGeneric.h  FrameReceiverConfig.h  FrameReceiverController.h  FrameReceiverDefaults.h  FrameReceiverGenericRxThread.h  shm-detector-impl.h  shm-detector-recv.h  shm-detector.h
cpp/frameReceiver/src/: CMakeLists.txt  DummySHMFrameDecoder.cpp  DummySHMFrameDecoderLib.cpp  FrameReceiverController.cpp  FrameReceiverGenericRxThread.cpp
cpp/test/dummy_example/: frameProcessor.sh  frameReceiver.sh
cpp/test/integrationTest/config/: CMakeLists.txt  dummySHM-fp.json  dummySHM-fr.json  dummySHM.json  testSHM.json
master/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
master/_static/: documentation_options.js
master/developer/: index.html
master/developer/explanations/: design-decisions.html  index.html  overview.html
master/developer/how-to/: common.html  docs.html  excalidraw.html  frame-decoder.html  frame-processor-plugin.html  frame-simulator-plugin.html  index.html
master/developer/reference/: index.html
master/developer/tutorials/: index.html  write-detector-support.html
master/user/: index.html
master/user/explanations/: frame-processor.html  frame-receiver.html  frame-simulator.html  index.html
(+15 files in other folders)
